fixing resposivnes- horizontal scrolling on phone eliminated

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header {
 }
 
 .search-bar-form {
-  width: 100%;
+  width: 90%;
   padding-bottom: 1rem;
   margin: 0 10%;
 }
